--- a/Frontend/src/app/user/user-login/user-login.component.html
+++ b/Frontend/src/app/user/user-login/user-login.component.html
@@ -1,8 +1,9 @@
+<!-- eslint-disable @angular-eslint/template/label-has-associated-control -->
 <div class="row">
   <div class="col-6 m-auto">
     <div class="card m-auto">
       <div class="card-header">
-        Login
+        <h3>Login</h3>
       </div>
       <div class="card-body">
         <form #loginForm="ngForm" (ngSubmit)="onlogin(loginForm)">
@@ -21,7 +22,7 @@
             <button type="button" class="btn btn-secondary ml-2">Cancel</button>
           </div>
 
-          <div class="form-group col-12" *ngIf="deviveInfo.deviceType != 'mobile'">
+          <div class="form-group col-12" *ngIf="deviveInfo.deviceType !== 'mobile'">
             <button [disabled]="!loginForm.valid" type="submit" style="margin-right: 2px; width: 290px;" class="btn btn-primary">Submit</button>
             <button type="button" style="width: 300px;" class="btn btn-secondary ml-2">Cancel</button>
           </div>
