--- a/Frontend/src/app/user/user-register/user-register.component.html
+++ b/Frontend/src/app/user/user-register/user-register.component.html
@@ -2,7 +2,7 @@
   <div class="col-8 m-auto">
   <div class="card m-auto">
     <div class="card-header">
-      Register (Admin Only)
+      <h3>Register (Admin Only)</h3>
     </div>
     <div class="card-body">
       <form [formGroup]="registerationForm" (ngSubmit)="onSubmit()">
