--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -325,7 +325,7 @@
 
         <mat-tab label="Contact">
 
-          <div class="card text-center" style="max-width: 100vw; min-height: 10vw;">
+          <div *ngIf="loggedinUser" class="card text-center" style="max-width: 100vw; min-height: 10vw;">
             <div class="card-header">
               <strong> Commission: {{property.contactCommission}} AED </strong>
             </div>
