--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -14,25 +14,30 @@
 
             <div class="card-body p-1">
 
-                <h5 class="mb-0" style="color: blue;" *ngIf="deviveInfo.deviceType !== 'mobile'"> 
-                    Project Name: {{property.projectName}} <br>
+                <h5 class="mb-0" *ngIf="property.sellRent === 1" style="color: red;"> For Sale in {{property.name}} | 
+                    {{property.bhk}} BHK {{property.propertyType}} 
+                    </h5>
+                <h5 class="mb-0" *ngIf="property.sellRent === 2" style="color: red;"> For Rent in {{property.name}} |
+                    {{property.bhk}} BHK {{property.propertyType}} 
+                    </h5>
+                <br>
+                <h6 class="mb-0" style="color: blue;" *ngIf="deviveInfo.deviceType !== 'mobile'"> 
+                    Project Name: {{property.projectName}} |
                     Propert Name: {{property.name}}
-                </h5>
-                <h5 class="mb-0" style="color: blue;" 
+                </h6>
+                <h6 class="mb-0" style="color: blue;" 
                     *ngIf="deviveInfo.deviceType=== 'mobile' && deviveInfo.orientation=== 'landscape'"> 
-                    Project Name: <br>{{property.projectName}} <br>
+                    Project Name: <br>{{property.projectName}} |
                     Propert Name: {{property.name}}
-                </h5>
-
-                <h6 class="mb-0" *ngIf="property.sellRent === 1"> {{property.bhk}} BHK {{property.propertyType}} For Sale</h6>
-                <h6 class="mb-0" *ngIf="property.sellRent === 2"> {{property.bhk}} BHK {{property.propertyType}} For Rent</h6>
-            
-                in {{property.name}}
-                <span *ngIf="property.name">,</span>
-                {{property.city}}
+                </h6>
             
                 <h6  class="mt-2">{{property.furnishingType}}
-                <span *ngIf="property.furnishingType !== 'Unfurnished'">Furnished</span> | Ready to Move</h6>
+                    <span *ngIf="property.furnishingType === 'Fully'"> Furnished</span>
+                    <span *ngIf="property.furnishingType === 'Semi'"> Furnished</span>
+                    <span *ngIf="property.furnishingType === 'Unfurnished'"></span>
+                    <span *ngIf="property.readyToMove" style="color: green;"> | Ready to Move</span>
+                    <span *ngIf="!property.readyToMove" style="color: red;"> | Available after {{property.estPossessionOn | date}}</span>
+                </h6>
             
                 <hr class="mt-0 mb-2">
             
