--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -237,7 +237,7 @@
                     <label>Building/Flat#</label>
                     
                     <input type="text"      
-                    formControlName="building_flat"
+                    formControlName="building_flat#"
                     class="form-control">
                   </div><br>
 
@@ -245,7 +245,7 @@
                     <label>Villa#</label>
                     
                     <input type="text"      
-                    formControlName="villa"
+                    formControlName="villa#"
                     class="form-control">
                   </div>
                 </div><br>
