--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -138,15 +138,15 @@
                           style="font-size: 30px;" >
                         </i> 
                         &nbsp; &nbsp;  
-                        <strong>{{property.bhk}} Beds</strong>&nbsp; &nbsp; 
+                        <strong>{{property.bhk}} Bedrooms</strong>&nbsp; &nbsp; 
                         
                         <i class="fa fa-bath" aria-hidden="true" 
                           style="font-size: 30px;" >
                         </i>
                         &nbsp; &nbsp;  
-                        <strong>{{property.bhk}} Bathrooms</strong><br> 
+                        <strong>{{property.bathroom}} Bathrooms</strong><br> 
                         
-                        <i class="fa-solid fa-square-parking" 
+                        <!-- <i class="fa-solid fa-square-parking" 
                           style="font-size: 30px;" >
                         </i> 
                         &nbsp; &nbsp; 
@@ -157,12 +157,12 @@
                         </i> 
                         &nbsp; &nbsp; 
                         <strong>{{property.swimmingPool}} Swimming Pool</strong>
-                        &nbsp; &nbsp;
+                        &nbsp; &nbsp; -->
                         
-                        <br><br>
+                        <br>
                         <strong>Places to visit around:</strong><br>
 
-                        <i class="fa-solid fa-store" aria-hidden="true" 
+                        <!-- <i class="fa-solid fa-store" aria-hidden="true" 
                             style="font-size: 30px; padding-top: 15px;">
                         </i>
                         
@@ -227,7 +227,7 @@
                         <strong>Mosque</strong>
                         &nbsp; &nbsp; &nbsp;
                         <strong *ngIf="property.mosque"> 10 minutes walk</strong> 
-                        <strong *ngIf="!property.mosque" style="color: red;"> Not Available </strong> 
+                        <strong *ngIf="!property.mosque" style="color: red;"> Not Available </strong>  -->
                   </div>
               </div>
             </div>
